Add connectionstring to appsettings.json

--- a/Labb3-AvanceradDotNet/appsettings.json
+++ b/Labb3-AvanceradDotNet/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Connection": "server = LAPTOP-4AAOB4IN;database = PersonInterestsDB;Trusted_Connection = True;Integrated Security = True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
